--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: first_flutter_test_space
 description: "A new Flutter project."
 # 아래 줄은 패키지가 실수로 pub.dev에 게시되는 것을 방지합니다.
 # 이는 개인 패키지에 대해 권장됩니다.
-publish_to: 'none' # pub.dev에 게시하려면 이 줄을 제거하세요.
+publish_to: "none" # pub.dev에 게시하려면 이 줄을 제거하세요.
 
 # 다음은 애플리케이션의 버전과 빌드 번호를 정의합니다.
 # 버전 번호는 점으로 구분된 세 개의 숫자 형식이며, 예: 1.2.43
