--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http:
+  flutter_rating_bar:
 
   # 아래 줄은 애플리케이션에 Cupertino Icons 글꼴을 추가합니다.
   # iOS 스타일 아이콘을 사용하려면 CupertinoIcons 클래스를 사용하세요.
